# pulseboost_cpp

./: .gitattributes  .gitignore  AGENTS.md  CHANGELOG.md  CMakeLists.txt  CMakePresets.json  CONTRIBUTING.md  GAPS.md  LICENSE.md  PLANS.md  PROGRESS.md  PROJECT_ORGANIZATION.md  PulseBoost_Installer.iss  README.md  RELEASE_CHECKLIST.md  SECURITY.md  TESTING.md  implement.md  qml.qrc  run_app.ps1  serve_app.py  start_app_and_wait.ps1  start_desktop.ps1
.codex/environments/: environment.toml
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  windows-ci.yml
ai/: agent_engine.cpp  ai_diagnostics_engine.cpp  chat_router.cpp  chatbot_interface.cpp  context_builder.cpp  llm_client.cpp  proactive_monitor.cpp  prompt_builder.cpp  pulse_model.cpp  session_memory.cpp  system_prediction.cpp
ai/model/: adaptive_engine.cpp  context_fusion.cpp  intent_classifier.cpp  response_generator.cpp
ai_model/: README.md
ai_model/data/: base_dataset.jsonl  optimization_responses.jsonl  pc_diagnostics.jsonl  safety_responses.jsonl
ai_model/train/: collect_training_data.py  evaluate_model.py  export_onnx.py  fine_tune.py  prepare_dataset.py  requirements.txt
app/: main.cpp
build_run/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  PulseBoost.vcxproj  PulseBoost.vcxproj.filters  PulseBoostAI.sln  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake
build_run/.qt/: QtDeploySupport-Debug.cmake  QtDeploySupport-MinSizeRel.cmake  QtDeploySupport-RelWithDebInfo.cmake  QtDeploySupport-Release.cmake
build_run/PulseBoost_autogen/: mocs_compilation_Release.cpp
common/: wmi_wrapper.cpp
core/: auto_updater.cpp  backend_daemon.cpp  crash_reporter.cpp  disk_analyzer.cpp  game_optimizer.cpp  license_manager.cpp  memory_analyzer.cpp  process_manager.cpp  pulse_bench.cpp  registry_optimizer.cpp  service_manager.cpp  startup_optimizer.cpp  system_advisor.cpp  system_scanner.cpp  telemetry_engine.cpp  telemetry_engine.h
data/: common_games.json  optimization_history.cpp  pulsebench_history.jsonl  pulsemodel_adaptive.sqlite  telemetry_cache.cpp  telemetry_logger.cpp
data/tauri_snapshots/: snapshot_2026-04-01_03-03-16Z.json  snapshot_2026-04-01_03-05-41Z.json  snapshot_2026-04-01_03-38-51Z.json
docs/: ARCHITECTURE.md  ARCHITECTURE_MAP.md  AUDIT_REPORT_PHASE0.md  AUTH_LICENSING_ARCHITECTURE.md  CLEAN_MACHINE_TEST_PLAN.md  CODE_SIGNING.md  CURRENT_APPLICATION_STATE.md  DESIGN_SYSTEM.md  ENTIRE_PRODUCT_DUMP.md  FULL_A_TO_Z_REVIEW.md  FULL_PRODUCT_REVIEW.md  GITHUB_REPOSITORY_SETUP.md  INSTALLER_ARCHITECTURE.md  INVESTOR_DEMO_SCRIPT.md  KNOWN_LIMITATIONS.md  PERSISTENCE_ARCHITECTURE.md  PRESENTMON_MANUAL_TESTING.md  PRIVACY.md  PRODUCTION_READINESS.md  PRODUCT_DOCUMENT.md  PULSEBOOST_API_REFERENCE.md  PULSEBOOST_A_TO_Z_HANDOFF.md  PULSEBOOST_FEATURE_MATRIX.md  PULSEBOOST_PAGE_MAP.md  PULSEBOOST_PRODUCT_DOSSIER.md  PULSEBOOST_SALE_READINESS.md  PULSEBOOST_SPEC.md  PULSEBOOST_TECHNICAL_ARCHITECTURE_CURRENT.md  RELEASE_CHECKLIST.md  RUN_GUIDE.md  SAFETY_MODEL.md  UI_EXPLORATION.md
docs/design/: PulseBoost_AI_Figma_to_QML_HANDOFF.md
modules/: defrag_trigger.cpp  developer_mode.cpp  disk_analyzer.cpp  duplicate_file_finder.cpp  game_mode.cpp  junk_cleaner.cpp  large_file_scanner.cpp  network_optimizer.cpp  process_optimizer.cpp  ram_optimizer.cpp  safety_guard.cpp  safety_policy.cpp  service_manager.cpp  startup_optimizer.cpp  tweak_engine.cpp
pulseboost/: .env.example  .gitignore  README.md  config.py  desktop_app.py  requirements.txt
pulseboost/api/: main.py  routes.py  schemas.py
pulseboost/core/: adaptive_engine.py  affinity_manager.py  audit_log.py  auth_service.py  benchmark_engine.py  capabilities.py  compatibility.py  database.py  entitlements.py  event_bus.py  game_detection.py  game_library.py  game_profile_service.py  gpu_controller.py  metrics.py  models.py  network_optimizer.py  optimizer.py  performance_diagnostics.py  platform_info.py  process_priority_manager.py  registry_wrapper.py  report_generator.py  revert_manager.py  safety_guard.py  secure_storage.py  service_wrapper.py  session_manager.py  session_recovery.py  steam_library.py  temporary_tweaks.py  trust_center.py
pulseboost/electron/: main.cjs  preload.cjs
pulseboost/infra/: docker-compose.yml  nginx.conf
pulseboost/prompts/: anomaly_analysis_v1.txt  chat_v1.txt  cognitive_core_system_v1.txt  leak_analyzer_v1.txt  optimization_hunter_v1.txt  planner_v1.txt  pulse_ai_system_prompt.txt  reasoner_v1.txt  reflection_v1.txt  session_detector_v1.txt  thermal_v1.txt
pulseboost/tests/: test_anomaly.py  test_app_startup_routes.py  test_auth_foundation.py  test_client_utils.py  test_collector.py  test_desktop_shell.py  test_foundation.py  test_game_detection.py  test_game_library.py  test_health_history_api.py  test_memory.py  test_optimization.py  test_optimizer_core.py  test_performance_diagnostics.py  test_phase10_hardening.py  test_phase2_database_migrations.py  test_phase3.py  test_phase5_benchmark.py  test_phase6_adaptive.py  test_phase7_network.py  test_phase8_gpu.py  test_phase9_profiles_trust.py  test_plans.py  test_registry_wrapper.py  test_report_generator.py  test_scorer.py  test_steam_library.py  test_suggestions_engine.py  test_ui_backend_wiring.py
pulseboost/ui/: index.html  package-lock.json  package.json  tailwind.config.js
scripts/: README.md  build.ps1  check_app.py  check_presentmon_csv.ps1  check_root_page.py  debug_app.ps1  debug_backend.ps1  debug_frontend.ps1  install-deps.ps1  package-validate.ps1  release-validate.ps1  run_with_presentmon_csv.ps1  serve_app.py  test.ps1
tauri_ui/: README.md  index.html  package-lock.json  package.json
tauri_ui/src-tauri/: Cargo.toml  tauri.conf.json
tauri_ui/src-tauri/src/: main.rs
tests/: junk_cleaner_tests.cpp  safety_policy_tests.cpp
ui/: chatbot_window.cpp  dashboard_ui.cpp  disk_visualizer.cpp  performance_graph.cpp
ui/qml/: main.qml  (+7 more)
ui_backend/: feature_gate.cpp  notification_manager.cpp  ui_controller.cpp  ui_preferences.cpp
(+269 files in other folders)
