[package]
name = "pulseboost_tauri_ui"
version = "1.0.0"
description = "PulseBoost AI Tauri Frontend Shell"
authors = ["HelaDev Studio"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "1.6", features = ["window-minimize", "window-maximize", "window-close"] }

[features]
custom-protocol = ["tauri/custom-protocol"]
